--- a/src/pokedex.css
+++ b/src/pokedex.css
@@ -18,6 +18,10 @@ header {
 	height: 400px;
 }
 
+p {
+	text-align: center;
+}
+
 @keyframes mudaImagens {
 	0% {
 		background-image: url('../imagens/wallpaper/gengar.jpg');
@@ -323,12 +327,12 @@ hr {
 
 	.ul-footer {
 		text-align: center;
-		padding: 20px 0px 20px 0px; 
+		padding: 10px 0px 10px 0px; 
 	}
 
 	.h5-footer {
 		text-align: center;
-		margin: 20px 0px 20px 0px;
+		margin: 10px 0px 10px 0px;
 		font-size: 1.4em;
 	}
 
