--- a/src/pokedex.css
+++ b/src/pokedex.css
@@ -299,7 +299,7 @@ hr {
 	}
 
 	#barra-de-rolagem {
-		height: 200px;
+		height: 170px;
 	}
 
 	#search-By-Name,
@@ -319,7 +319,8 @@ hr {
 
 
 	#title-section {
-		margin: 20px 0px 30px 0px;
+		width: 90%;
+		margin-top: 30px auto;
 		padding-top: 0px;
 		text-align: center;
 	}
