--- a/src/pokedex.css
+++ b/src/pokedex.css
@@ -91,6 +91,7 @@ nav {
 	display: flex;
 	flex-direction: row-reverse;
 	align-items: baseline;
+	justify-content: space-evenly;
 }
 
 .btn {
@@ -167,7 +168,7 @@ aside {
 }
 
 #info {
-	width: 90%;
+	width: 100%;
 }
 
 
@@ -202,7 +203,6 @@ aside {
 }
 
 .pokemon-image-type {
-	width: 55px;
 	padding: 5px;
 }
 
@@ -242,7 +242,7 @@ hr {
 
 #barra-de-rolagem {
 	display: block;
-	width: 350px;
+	width: 100%;
 	height: 250px;
 	overflow-y: scroll;
 	scroll-behavior: smooth;
