--- a/src/pokedex.css
+++ b/src/pokedex.css
@@ -240,6 +240,7 @@ nav {
 	justify-content: left;
 	padding-left: 10px;
 	line-height: 2.3;
+	width: 40%;
 }
 
 
@@ -554,6 +555,19 @@ hr {
 		align-items: center;
 	}
 
+	#divDadosIniciais {
+	display: flex;
+	color: white;
+	text-shadow: black 0.1em 0.1em;
+	font-size: 18px;
+	font-weight: bolder;
+	flex-direction: column;
+	justify-content: left;
+	padding-left: 10px;
+	line-height: 2.3;
+	width: 45%;
+}
+
 	#divStats {
 		width: 100%;
 		border-radius: 8px;
@@ -582,7 +596,7 @@ hr {
 	}
 
 	#teste2 {
-		width: 90%;
+		width: 100%;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
